add icon and change app name

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -10,39 +9,35 @@
 
     <ImageView
         android:id="@+id/image"
-        android:layout_weight="20"
-        android:layout_height="wrap_content"
         android:layout_width="match_parent"
-        />
+        android:layout_height="wrap_content"
+        android:layout_weight="20" />
 
     <FrameLayout
-        android:layout_weight="1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        >
+        android:layout_weight="1">
+
         <Button
             android:id="@+id/ocr"
-            android:text="ocr"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="right|center"
-            />
+            android:text="ocr" />
 
         <Button
             android:id="@+id/picture"
-            android:text="picture"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            />
+            android:text="picture" />
 
         <Button
             android:id="@+id/camera"
-            android:text="camera"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="left|center"
-            />
+            android:text="camera" />
         <!--
         <Button
             android:id="@+id/ocr"
@@ -69,4 +64,5 @@
             />
             -->
     </FrameLayout>
+
 </LinearLayout>
