--- a/app/src/main/res/menu/toolbar.xml
+++ b/app/src/main/res/menu/toolbar.xml
@@ -3,6 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
+        android:id="@+id/crop"
+        android:title="Crop"
+        android:icon="@drawable/crop_24px"
+        app:showAsAction="always"
+        />
+    <item
         android:id="@+id/album"
         android:title="Album"
         android:icon="@drawable/picture_24px"
