--- a/app/src/main/res/menu/ocr_toolbar.xml
+++ b/app/src/main/res/menu/ocr_toolbar.xml
@@ -15,4 +15,11 @@
         app:showAsAction="always"
         />
 
+    <item
+        android:id="@+id/share"
+        android:title="Share"
+        android:icon="@drawable/share_24"
+        app:showAsAction="always"
+        />
+
 </menu>
